<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_material_light"
    tools:context="com.example.helloworld.loginScreen">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_above="@+id/sign_in_button"
        android:layout_alignLeft="@+id/email_field"
        android:layout_alignStart="@+id/email_field"
        android:layout_marginBottom="33dp"
        android:id="@+id/password_field"
        android:hint="Password"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_field"
        android:layout_above="@+id/password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:hint="Email"/>

    <TextView
        android:text="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="45dp"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Create Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_button"
        android:layout_marginBottom="69dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Sign In"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:id="@+id/sign_in_button"
        android:layout_alignBottom="@+id/create_account_button"
        android:layout_centerHorizontal="true" />

    <!--shivangi's coment-->
</RelativeLayout>
