<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_create_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.sc.cse.CreateGroup"
    tools:showIn="@layout/activity_create_group"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:ems="10"
                android:hint="Enter a class:"
                android:maxLines="1"
                android:singleLine="true" />


            <EditText
                android:id="@+id/Location"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:ems="10"
                android:hint="Location:"
                android:inputType="textCapSentences|text" />

            <EditText
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:ems="10"
                android:hint="Description:"
                android:inputType="textCapSentences|text" />

            <TextView
                android:id="@+id/displayTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/chooseTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Set Time"
                android:textSize="20dp" />



            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />


            <ImageButton
                android:id="@+id/study_room_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:background="@mipmap/book_study_room"
                android:onClick="studyRoomButtonClick"
                android:scaleType="fitXY" />

            <Button
                android:id="@+id/create_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:onClick="@+id/createButton"
                android:text="CREATE"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
