<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
...
            android:textColor="#FFFFFFFF"
            android:textSize="30sp" />

        <Button
            android:text="@string/create_study_event"
            android:onClick="createEvent"
            android:id="@+id/button3"
            android:textColor="#FFFFFFFF"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
...
