<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_findEvent"
            android:title="Find Study Event" />
        <item
            android:id="@+id/nav_createEvent"
            android:title="Create Study Event" />
        <item
            android:id="@+id/nav_myEvents"
            android:title="My Study Events" />

    </group>

    <item android:title="User">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="Logout" />

        </menu>
    </item>

</menu>
